# genai-soc-labs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  lab_improvement.md
docs/: architecture.md  evaluation.md  roadmap.md  security-and-ethics.md  source-briefs.tsv
labs/: README.md
labs/01-incidentlens-incident-report/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
labs/01-incidentlens-incident-report/backend/app/: __init__.py  main.py  schemas.py
labs/01-incidentlens-incident-report/backend/app/api/: routes.py
labs/01-incidentlens-incident-report/backend/app/core/: config.py  security.py
labs/01-incidentlens-incident-report/backend/app/services/: __init__.py  analysis.py  mitre.py  parser.py  quality.py  report.py  response.py  risk.py  timeline.py
labs/01-incidentlens-incident-report/backend/app/storage/: sqlite.py
labs/01-incidentlens-incident-report/docs/: api.md  architecture.md  evaluation.md
labs/01-incidentlens-incident-report/frontend/: app.js  index.html  styles.css
labs/01-incidentlens-incident-report/sample-data/incidents/acme-ransomware/: README.md  logs.jsonl
labs/01-incidentlens-incident-report/scripts/: load_sample.py
labs/01-incidentlens-incident-report/tests/: test_analysis.py  test_api.py  test_parser.py
labs/02-queryforge-siem-assistant/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
shared/: README.md
(+82 files in other folders)
